[package]
name = "harulisp"
version = "0.2.0"
edition = "2021"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
description = "A modern lisp dialect"
readme = "README.md"
homepage = "https://github.com/haruki7049/harulisp"
repository = "https://github.com/haruki7049/harulisp"
license = "MIT"
keywords = ["lisp"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-lite = "0.1.5"
